--- a/loading.html
+++ b/loading.html
@@ -6,7 +6,243 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>loading</title>
-    <link rel="stylesheet" href="./loading.css">
+    <style>
+        .root {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100vw;
+  height: 100vh;
+  background: #fff;
+}
+
+.container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 168px;
+  height: 224px;
+  margin: auto;
+}
+
+.shadowContainer {
+  position: relative;
+  width: 168px;
+  height: 112px;
+  margin-top: -23px;
+  transform: rotate(45deg);
+}
+
+.shadow {
+    position: absolute;
+    width: 56px;
+    height: 56px;
+    background: #c9d4d7;
+  }
+
+.shadowOne {
+    top: 0;
+    left: 0;
+    animation: animationOne 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.shadowTwo {
+    top: 0;
+    left: 55px;
+    animation: animationTwo 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.shadowThree {
+    top: 55px;
+    left: 55px;
+    animation: animationThree 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.shadowFour {
+    top: 55px;
+    left: 110px;
+    animation: animationFour 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.cubeContainer {
+  position: relative;
+  top: -73px;
+  width: 190px;
+  height: 134px;
+  transform: rotate(45deg);
+}
+
+.cubeOne {
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: animationOne 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.cubeTwo {
+    position: absolute;
+    top: 0;
+    left: 55px;
+    animation: animationTwo 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.cubeTwo .left {
+    animation: animationzIndex 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.cubeThree {
+    position: absolute;
+    top: 55px;
+    left: 55px;
+    border-bottom-left-radius: 1px;
+    animation: animationThree 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.cubeFour {
+    position: absolute;
+    top: 55px;
+    left: 110px;
+    animation: animationFour 0.75s infinite cubic-bezier(0.33, 0, 0.83, 1);
+}
+
+.top {
+    position: relative;
+    z-index: 10001;
+    width: 56px;
+    height: 56px;
+    background: #4ec8f8;
+    border-top-right-radius: 1px;
+    border-bottom-left-radius: 1px;
+  }
+
+.left {
+    width: 56px;
+    height: 25px;
+    background: #29bee1;
+    transform: skew(45deg) rotate(180deg) translate(-13px);
+}
+
+.right {
+    width: 37px;
+    height: 39px;
+    background: #129cb1;
+    border-top-left-radius: 1px;
+    transform: translate(50px, -60px) rotate(45deg) skew(45deg);
+}
+
+.text {
+  width: 100%;
+  height: 32px;
+  margin-top: 64px;
+  color: #69707a;
+  font-size: 32px;
+  text-align: center;
+  text-indent: 24px;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+      transform: scale(0.8);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+      transform: scale(1);
+  }
+}
+
+@keyframes animationOne {
+  0% {
+    top: 0;
+    left: 0;
+  }
+
+  50% {
+    top: 0;
+    left: 55px;
+  }
+
+  100% {
+    top: 0;
+    left: 55px;
+  }
+}
+
+@keyframes animationTwo {
+  0% {
+    top: 0;
+    left: 55px;
+  }
+
+  50% {
+    top: 0;
+    left: 110px;
+  }
+
+  100% {
+    top: 55px;
+    left: 110px;
+  }
+}
+
+@keyframes animationThree {
+  0% {
+    top: 55px;
+    left: 55px;
+  }
+
+  50% {
+    top: 55px;
+    left: 0;
+  }
+
+  100% {
+    top: 0;
+    left: 0;
+  }
+}
+
+@keyframes animationFour {
+  0% {
+    top: 55px;
+    left: 110px;
+  }
+
+  50% {
+    top: 55px;
+    left: 55px;
+  }
+
+  100% {
+    top: 55px;
+    left: 55px;
+  }
+}
+
+/* 右下角的立方体的左侧面在横轴方向时是在最低层的，并且到了纵轴方向需要再最上层，达到一个立体交错切换的效果 */
+@keyframes animationzIndex {
+  0% {
+    position: relative;
+    z-index: 0;
+  }
+
+  50% {
+    position: relative;
+    z-index: 0;
+  }
+
+  100% {
+    position: relative;
+    z-index: 10000;
+  }
+}
+    </style>
 </head>
 
 <body>
